--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,11 +1,11 @@
 footer {
-  background-color: white;
-  height: 60px;
-  width: 100%;
-  border-top: 1px solid #cccccc;
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  bottom: 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    height: 60px;
+    border-top: 1px solid #CCCCCC;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
