--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,51 +1,48 @@
 .filters {
-  background-color: white;
-  height: 70px;
-  width: 100%;
-  border: solid 1px #dddddd;
-  border-radius: 4px;
-  text-align: right;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
-section.filters button {
-  margin-top: 11px;
-  margin-bottom: 11px;
-  margin-right: 30px;
-  font-size: 18px;
-  background-color: #ff5a5f;
-  color: white;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
+section.filters button{
+    font-size: 18px;
+    color: white;
+    background-color: #FF5A5F;
+    height: 48px;
+    border: 0px;
+    border-radius: 4px;
+    width: 20%;
+    margin-left: auto;
+    margin-right: 30px;
+    opacity: 1;
 }
+
 section.filters button:hover {
-  opacity: 0.9;
+    opacity: 0.9;
 }
+
+.locations, .amenities {
+    height: 100%;
+    width: 25%;
+    padding-left: 50px;
+}
+
 .locations {
-  text-align: left;
-  height: 100%;
-  width: 25%;
-  border-right: solid 1px #dddddd;
-  margin-left: 30px;
-  float: left;
+    border-right: 1px solid #DDDDDD;
 }
-.amenities {
-  text-align: left;
-  height: 100%;
-  width: 25%;
-  margin-left: 30px;
-  float: left;
+
+.locations h3, .amenities h3 {
+    font-weight: 600;
+    margin: 12px 0 5px 0;
 }
-h3 {
-  font-weight: 600;
-  margin: 0px;
-  margin-top: 17px;
-  padding: 0px;
-}
-h4 {
-  margin: 0px;
-  padding: 0px;
-  font-weight: 400;
-  font-size: 14px;
+
+.locations h4, .amenities h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0 0 0 0;
 }
