--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,32 +1,29 @@
 .places {
-  border: 0;
-  display: flex;
-  flex-direction: column;
-  padding-left: 30px;
+    width: 100%;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-.places h1 {
-  font-size: 30px;
+
+.places > h1 {
+    font-size: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-bottom: 0px;
+    flex: 0 1 100%;
 }
-.places_title {
-  padding-top: 30px;
-  margin-bottom: -25px;
+.places > article {
+    width: 390px;
+    padding: 20px 20px 20px 20px;
+    margin: 20px 20px 20px 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
 }
-.articles {
-  display: flex;
-  align-items: baseline;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.places article {
-  width: 390px;
-  margin: 20px;
-  padding: 20px;
-  border: solid #ff5a5f 1px;
-  border-radius: 4px;
-  text-align: center;
-  font-size: 30px;
-}
-article h2 {
-  font-size: 30px;
-  margin-top: -2px;
+
+.places > article > h2 {
+    font-size: 30px;
 }
