--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,140 +1,107 @@
 .places {
-  display: flex;
-  flex-direction: column;
-  padding-left: 30px;
+    width: 100%;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-.places h1 {
-  font-size: 30px;
+
+.places > h1 {
+    font-size: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-bottom: 0px;
+    flex: 0 1 100%;
 }
-.places_title {
-  padding-top: 30px;
-  margin-bottom: -25px;
+.places > article {
+    width: 390px;
+    padding: 20px 20px 20px 20px;
+    margin: 20px 20px 20px 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
 }
-.articles {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+
+.places > article > h2 {
+    font-size: 30px;
+    margin: 0 0 0 0;
+    align-self: center;
 }
-article {
-  width: 390px;
-  margin: 20px;
-  padding: 20px;
-  border: solid #ff5a5f 1px;
-  border-radius: 4px;
-  text-align: center;
-  font-size: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-bottom: 30px;
-  position: relative;
-}
-article h2 {
-  font-size: 30px;
-  margin-top: -1px;
-  padding-left: 0%;
-}
-.article_title {
-  width: 100%;
-}
+
 .price_by_night {
-  color: #ff5a5f;
-  border: 4px solid #ff5a5f;
-  min-width: 60px;
-  height: 60px;
-  font-size: 30px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  margin-top: -5px;
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
+    min-width: 60px;
+    height: 60px;
+    font-size: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
-.price {
-  margin-top: -1px;
+.price_by_night > p {
+    margin: 0 0 0 0;
 }
-.price_title {
-  display: flex;
-}
+
 .information {
-  height: 80px;
-  border-top: solid #dddddd 1px;
-  border-bottom: solid #dddddd 1px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-.max_guest {
-  width: 100px;
-  display: flex;
-  height: inherit;
-  flex-direction: column;
-  justify-content: center;
-}
-.guest_icon {
-  height: inherit;
-  width: inherit;
-  background: url("../images/icon_group.png");
-  background-repeat: no-repeat;
-  margin-left: 35px;
-}
-.guest_number h2 {
-  font-size: 14px;
-  color: #484848;
-  font-weight: normal;
+    align-self: center;
+    height: 80px;
+    width: 100%;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.number_rooms {
-  width: 100px;
-  display: flex;
-  height: inherit;
-  flex-direction: column;
-  justify-content: center;
-}
-.rooms_icon {
-  height: inherit;
-  width: inherit;
-  background: url("../images/icon_bed.png");
-  background-repeat: no-repeat;
-  margin-left: 35px;
-}
-.rooms_number h2 {
-  font-size: 14px;
-  color: #484848;
-  font-weight: normal;
+.max_guest, .number_rooms, .number_bathrooms {
+    width: 100px;
+    text-align: center;
 }
 
-.number_bathrooms {
-  width: 100px;
-  display: flex;
-  height: inherit;
-  flex-direction: column;
-  justify-content: center;
+.max_guest > p, .number_rooms > p, .number_bathrooms > p{
+    margin-top: auto;
+    margin-bottom: auto;
 }
-.bathrooms_icon {
-  height: inherit;
-  width: inherit;
-  background: url("../images/icon_bath.png");
-  background-repeat: no-repeat;
-  margin-left: 35px;
+
+.guest_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_group.png") no-repeat center;
 }
-.bathrooms_number h2 {
-  font-size: 14px;
-  color: #484848;
-  font-weight: normal;
+
+.bed_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_bed.png") no-repeat center;
 }
-.user {
-  font-size: 14px;
-  color: #484848;
-  text-align: left;
-  margin-top: 15px;
+
+.bath_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_bath.png") no-repeat center;
 }
-.description {
-  font-size: 14px;
-  text-align: left;
-  margin-top: 7px;
-  margin-bottom: 0px;
+
+.user > p {
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+.description > p {
+    margin-top: 7px;
+    margin-bottom: 0px;
 }
